Fix : Align text to left.

--- a/docs/output.css
+++ b/docs/output.css
@@ -615,10 +615,6 @@ video {
   margin-top: 9rem;
 }
 
-.mt-20 {
-  margin-top: 5rem;
-}
-
 .mt-40 {
   margin-top: 10rem;
 }
@@ -708,11 +704,6 @@ video {
   border-color: rgb(7 4 57 / var(--tw-border-opacity));
 }
 
-.border-r-red-600 {
-  --tw-border-opacity: 1;
-  border-right-color: rgb(220 38 38 / var(--tw-border-opacity));
-}
-
 .bg-Light-Grayish-Blue {
   --tw-bg-opacity: 1;
   background-color: hsl(240 75% 98% / var(--tw-bg-opacity));
@@ -738,9 +729,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-700 {
+.bg-red-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .p-10 {
@@ -818,6 +809,10 @@ video {
 
 .pt-5 {
   padding-top: 1.25rem;
+}
+
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -907,6 +902,26 @@ video {
 
   .md\:p-0 {
     padding: 0px;
+  }
+
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .md\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:text-left {
